fix: header overflow on mobile

--- a/themes/hello-friend-ng/assets/scss/_header.scss
+++ b/themes/hello-friend-ng/assets/scss/_header.scss
@@ -45,18 +45,6 @@
 
   &.minimize {
     padding: 5px;
-
-    .logo {
-      img {
-        height: 50px;
-      }
-
-      .logo-labels {
-        .sub-label {
-          display: none;
-        }
-      }
-    }
   }
 }
 
